# Reshaish-BackEnd

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  manage.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
accounts/: admin.py  permissions.py
accounts/migrations/: 0001_initial.py  0002_useronboarding.py  0003_user_email_verified_emailotp.py  0004_emailotp_otp_secret.py  0005_alter_user_options_user_unique_user_email_ci_and_more.py  0006_user_profile_photo.py  0007_alter_emailotp_purpose.py
accounts/models/: __init__.py  email_otp.py  onboarding.py  user.py
accounts/serializers/: __init__.py  auth.py  onboarding.py  user.py
accounts/services/: __init__.py  email_verification.py  onboarding_notifications.py  users.py
accounts/views/: __init__.py  auth.py  onboarding.py  user.py
agreements/: admin.py  permissions.py
agreements/migrations/: 0001_initial.py
agreements/models/: __init__.py  agreement.py  key_handover.py
agreements/serializers/: __init__.py  agreement.py  key_handover.py
agreements/services/: __init__.py  agreements.py  key_handover_otp.py  key_handovers.py
agreements/views/: __init__.py  agreement.py  key_handover.py
audit/: admin.py  permissions.py
audit/migrations/: 0001_initial.py
audit/models/: __init__.py  audit_log.py
config/: settings.py  urls.py
flatmates/: admin.py  apps.py  permissions.py
payments/: admin.py  permissions.py
properties/: admin.py  permissions.py
services_marketplace/: admin.py  apps.py  permissions.py
visits/: admin.py  permissions.py
(+107 files in other folders)
