[tool.poetry]
name = "rehaish-backend"
version = "0.1.0"
description = "Django REST backend for Rehaish smart renting ecosystem"
authors = ["Rehaish Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
django = "^5.2.1"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
django-filter = "^25.1"
psycopg = { version = "^3.2.9", extras = ["binary"] }
python-dotenv = "^1.1.0"
pillow = "^11.2.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.11"
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["DJ001"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "I001"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
